TestSuite/errors/err0142.pas
type TFunc = function : integer;

var t : TFunc;

begin
t(2);
end.